# playground

./: .gitignore  LICENSE  README.md  demo.html  demo.qmd
.devcontainer/: devcontainer.json
CUDA/cohort/: add_basic.cu  add_basic.exp  add_basic.lib
CUDA/notebooks/: hello_world.ipynb  matrix_multiplication.ipynb
MDPs/notes/: MDPs.tex
blog/: _publish.yml  _quarto.yml  index.qmd
blog/_site/: about.html  blog.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
blog/_site/posts/first_post/: index.html
blog/notebooks/: candidates_for_interp_biling_features.ipynb  multiprocessing.ipynb  multiprocessing_code.py  reference_counts.ipynb  synchronization.ipynb  threading_benchmark.parquet
blog/notebooks_code/: multiprocessing_samples.py
blog/posts/bludot_mechinterp_project/: index.ipynb  index.qmd  index.quarto_ipynb  ref.bib  requirement.txt  styles.css
blog/posts/cuda_cohort_w1/: index.qmd  ref.bib  styles.css
blog/posts/first_post/: index.qmd  ref.bib
blog/posts/future_of_ai_1/: index.qmd  ref.bib
blog/posts/future_of_ai_2/: index.qmd
blog/posts/template/: index.qmd
docker/dev/: Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml
implementations/dl/: transformers_decoder.ipynb  transformers_decoder.py
implementations/ml/knn/: README.md  implementation.cpp  knn.cpp  knn.h  main.cpp  utils.cpp
learning/emergent_misalignment/: Makefile  emergent_missalignment_vllm.ipynb  emergnet_misalignment_hf.ipynb  eval.py  eval_evil_bf16.ipynb  first_plot_questions.yaml  judge.py  main.py  pyproject.toml
(+13 files in other folders)
